--- a/src/styles/3-modules/__nav-bar.sass
+++ b/src/styles/3-modules/__nav-bar.sass
@@ -6,12 +6,8 @@
     text-shadow: $color 0px 0px 6px, $color 0px 0px 10px
   
 .nav-logo
-  display: flex
-  align-items: center
-  justify-content: center
-  img
-    height: 100px
-    width: 200px
+  height: 50px
+  width: 10vw
 
 .side-section
   // background-image: url('./assets/imgs/stars.jpeg')
@@ -118,26 +114,27 @@ nav
 
   &.show  
     transform: translatey(0%) 
-
+    animation: fadein 1s 
     display: inline
 
-   
+  
   font-family: 'Audiowide', cursive
   color: white 
   background: #222 
   position: relative 
   transform: translatey(-3000%) 
   transition: transform 0.5s ease 
-  bottom: 0px 
-  padding-left: 16px 
+  // bottom: 0px 
   ul  
 
-    width: 95vw
+    width: 100vw
     list-style: none 
     padding: 0 
     margin: 0 
+    margin-block-start: 0
+    margin-block-end: 0
     // font-weight:bolder 
-    li  
+    .menu-btn  
       +lightsaber(#4df) 
       font-size: 18pt 
       line-height: 1.25em
@@ -157,7 +154,6 @@ nav
         text-decoration: none 
 
         color: inherit 
-        padding-right: 16px 
        
       &.green  
         @include lightsaber(#0F0) 
